<resources>
    <string name="app_name">Bitcoin BR</string>
    <string name="navigation_home">Bitcoin</string>
    <string name="navigation_exchanges">Exchanges</string>
    <string name="navigation_alert">Alertas</string>
    <string name="label_value">Cotação</string>
    <string name="label_max">Máximo</string>
    <string name="label_best_buy">Melhor exchange para comprar</string>
    <string name="label_best_sell">Melhor exchange para vender</string>
    <string name="label_min">Minimo</string>
    <string name="label_volume">Volume</string>
    <string name="label_trade">Trades</string>
    <string name="label_date_value">Atualizado em %1$s às %2$s</string>
    <string name="msg_erro_exchange">Não foi possivel carregar a \nlista de exchange</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_ranking">Ranking</string>
    <string name="erro_conection">Não foi possível realizar essa ação.</string>

</resources>
